unpackaged/main/default/objects/RSS_discount_campaign_event__e/RSS_discount_campaign_event__e.object-meta.xml
<CustomObject>
    <label>RSS discount campaign event</label>
    <pluralLabel>RSS discount campaign events</pluralLabel>
</CustomObject>