unpackaged/main/default/objects/RSS_discount_campaign_event__e/fields/campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>campaign_ID__c</fullName>
    <label>campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>