unpackaged/main/default/objects/RSS_discount_campaign_event__e/fields/campaignMember__c.field-meta.xml
<CustomField>
    <fullName>campaignMember__c</fullName>
    <label>campaignMember</label>
    <length>255</length>
    <type>Text</type>
</CustomField>