unpackaged/main/default/objects/RSS_discount_campaign_event__e/fields/event_type__c.field-meta.xml
<CustomField>
    <fullName>event_type__c</fullName>
    <label>event type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>